add assets, better drop handling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
           ondragover="dragover_handler(event);">
 
             <img id="card1"
-                 src="card1.svg"
+                 class="card"
+                 src="assets/card1.svg"
+                 draggable="true"
+                 ondragstart="dragstart_handler(event)">
+            <img id="card2"
+                 class="card"
+                 src="assets/card2.svg"
                  draggable="true"
                  ondragstart="dragstart_handler(event)">
         </div>
