load cards in js

--- a/index.html
+++ b/index.html
@@ -9,19 +9,7 @@
   <body>
     <div id=wrapper>
       <div class="playmat">
-        <div id="stack" class="card-place drop">
-
-            <img id="card1"
-                 class="card"
-                 src="assets/card1.svg"
-                 draggable="true"
-                 ondragstart="dragstart_handler(event)">
-            <img id="card2"
-                 class="card"
-                 src="assets/card2.svg"
-                 draggable="true"
-                 ondragstart="dragstart_handler(event)">
-        </div>
+        <div id="stack" class="card-place drop"></div>
 
         <div id="discard" class="card-place drop"></div>
       </div>
