--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>Turnorder deck</title>
     <meta name="description" content="An online implementation of the aeons end turnorder deck.">
     <meta name="author" content="felix">
-    <!--    <meta name="theme-color" content="#B12A34"> -->
+    <meta name="theme-color" content="#B12A34">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--    <meta property="og:image" content="icons/icon-512.png"> -->
     <script src="data/cards.js" defer></script>
     <script src="app.js" defer></script>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="app.css">
-    <!--  <link rel="manifest" href="js13kpwa.webmanifest"> -->
+    <link rel="manifest" href="turnorder.webmanifest">
   </head>
   <body>
     <header>
