--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Turnorder deck</title>
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--    <meta property="og:image" content="icons/icon-512.png"> -->
     <script src="data/cards.js" defer></script>
+    <script src="js/turnorder.js" defer></script>
     <script src="app.js" defer></script>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="app.css">
@@ -21,7 +22,7 @@
     <main>
     <div id=wrapper>
       <div class="playmat">
-        <div id="stack" class="card-place drop"></div>
+        <div id="draw" class="card-place drop"></div>
         <div id="discard" class="card-place drop"></div>
       </div>
     </div>
