--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="data/cards.js" defer></script>
     <script src="js/event_handler.js" defer></script>
     <script src="js/renderer.js" defer></script>
-    <script src="js/ruleBook.js" defer></script>
+    <script src="js/rulebook.js" defer></script>
     <script src="js/turnorder.js" defer></script>
     <script src="app.js" defer></script>
     <link rel="shortcut icon" href="favicon.ico">
